--- a/app/src/main/res/layout/activity_building.xml
+++ b/app/src/main/res/layout/activity_building.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_building"
     android:layout_width="match_parent"
@@ -11,18 +11,17 @@
     tools:context="com.pathfinders.BuildingActivity"
     android:orientation="vertical">
 
-    <!-- Search Bar -->
-    <EditText
-        android:id="@+id/search_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textVisiblePassword"/>
+</ListView>
 
-
-    <!-- Building List -->
-    <ListView
-        android:id="@+id/buildings"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ListView>
-</LinearLayout>
+<!--
+<EditText
+android:id="@+id/search_bar"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:inputType="textVisiblePassword"/>
+<ListView
+android:id="@+id/buildings"
+android:layout_width="match_parent"
+android:layout_height="wrap_content">
+</ListView>
+-->
