--- a/app/src/main/res/layout/activity_building.xml
+++ b/app/src/main/res/layout/activity_building.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_building"
     android:layout_width="match_parent"
@@ -10,18 +10,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.pathfinders.BuildingActivity"
     android:orientation="vertical">
+    <EditText
+        android:id="@+id/search_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textVisiblePassword"/>
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </ListView>
 
-</ListView>
+</LinearLayout>
 
 <!--
-<EditText
-android:id="@+id/search_bar"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:inputType="textVisiblePassword"/>
-<ListView
-android:id="@+id/buildings"
-android:layout_width="match_parent"
-android:layout_height="wrap_content">
-</ListView>
+
 -->
