--- a/app/src/main/res/layout/activity_room_list.xml
+++ b/app/src/main/res/layout/activity_room_list.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical">
     <EditText
-        android:id="@+id/search_bar"
+        android:id="@+id/room_search_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textVisiblePassword"/>
