--- a/app/src/main/res/layout/activity_room_list.xml
+++ b/app/src/main/res/layout/activity_room_list.xml
@@ -30,6 +30,10 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <ImageView
+            android:id="@+id/buildingImage"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
 
         <EditText
             android:id="@+id/room_search_bar"
