--- a/app/src/main/res/layout/activity_room_list.xml
+++ b/app/src/main/res/layout/activity_room_list.xml
@@ -30,10 +30,16 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <TextView
+            android:id="@+id/buildingName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:padding="4dp"/>
         <ImageView
             android:id="@+id/buildingImage"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:layout_height="400px" />
 
         <EditText
             android:id="@+id/room_search_bar"
