--- a/app/src/main/res/layout/activity_building.xml
+++ b/app/src/main/res/layout/activity_building.xml
@@ -36,10 +36,23 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:padding="4dp"/>
-        <ImageView
-            android:id="@+id/buildingImage"
-            android:layout_width="wrap_content"
-            android:layout_height="400px" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/buildingImage"
+                android:layout_width="500px"
+                android:layout_height="500px" />
+            <Button
+                android:id="@+id/navButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Navigate"
+                android:drawableTop="@drawable/ic_navigation_black_48dp"
+                />
+        </LinearLayout>
+
 
         <EditText
             android:id="@+id/room_search_bar"
