--- a/app/src/main/res/layout/item_building_list.xml
+++ b/app/src/main/res/layout/item_building_list.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal">
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
+        android:layout_width="150px"
         android:layout_height="match_parent" />
     <TextView
         android:id="@+id/buildingName"
