--- a/app/src/main/res/layout/activity_entrance_list.xml
+++ b/app/src/main/res/layout/activity_entrance_list.xml
@@ -5,19 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.roomfinder.BuildingActivity">
+    tools:context="com.roomfinder.NavigationActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/room_toolbar"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
 
@@ -30,41 +30,15 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        <TextView
-            android:id="@+id/buildingName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:padding="4dp"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2">
-            <ImageView
-                android:id="@+id/buildingImage"
-                android:layout_width="500px"
-                android:layout_height="500px"
-                android:layout_weight="1"/>
-            <Button
-                android:id="@+id/navButton"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Navigate"
-                android:drawableTop="@drawable/ic_navigation_black_48dp"
-                android:layout_weight="1"
-                />
-        </LinearLayout>
-
 
         <EditText
-            android:id="@+id/room_search_bar"
+            android:id="@+id/entrance_search_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textVisiblePassword" />
 
         <ListView
-            android:id="@+id/room_list"
+            android:id="@+id/entrance_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></ListView>
     </LinearLayout>
