--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -31,15 +31,13 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="com.roomfinder.NavigationActivity"
         tools:showIn="@layout/activity_navigation">
+        <ListView
+            android:id="@+id/directions_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></ListView>
 
     </RelativeLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+
 
 </android.support.design.widget.CoordinatorLayout>
